feature/APP-Add-favicons
- Add favicons
- Add custom _document
- Update news service

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "node": true,
         "es6": true
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "sourceType": "module",
         "ecmaFeatures": {
